clusters/etl4/overlays/bookinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
    istio-injection: enabled    
  name: bookinfo
