clusters/etl4/overlays/bookinfo/cl-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bookinfo
  labels:
    kuadrant.io/lb-attribute-geo-code: ${CLUSTER_NAME}
spec:
  gatewayClassName: istio
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.cl.vips.${CLUSTER_BASE_DOMAIN}'
      name: api
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ''
            kind: Secret
            name: gateway-ingress-certs-tls
        mode: Terminate
