clusters/etl4/overlays/bookinfo/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - bookinfo.mesh.vips.${CLUSTER_BASE_DOMAIN}
  gateways:
  - bookinfo/bookinfo
  http:
  - match:
    - uri:
        prefix: /reviews/
    route:
    - destination:
        port:
          number: 9080
        host: reviews.bookinfo.svc.cluster.local
